--- a/TDefenceGame.dproj
+++ b/TDefenceGame.dproj
@@ -140,6 +140,7 @@
         <DCCReference Include="Physics2D\UPhysics2DPolygonTool.pas"/>
         <DCCReference Include="Physics2D\UPhysics2DTypes.pas"/>
         <DCCReference Include="gtypes.pas"/>
+        <DCCReference Include="gunits.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
