--- a/TDefenceGame.dproj
+++ b/TDefenceGame.dproj
@@ -147,6 +147,7 @@
         <DCCReference Include="gBots.pas"/>
         <DCCReference Include="gPickableItems.pas"/>
         <DCCReference Include="gSpawner.pas"/>
+        <DCCReference Include="gLevelResults.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
